bug on safari fix scroll

--- a/global.css
+++ b/global.css
@@ -243,8 +243,7 @@ html.lenis body {
     top: 0;
     left: 0;
     width: 100%;
-    overflow: hidden;
-    height: 100lvh;
+    min-height: 100lvh;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -325,7 +324,7 @@ html.lenis body {
 /* footer page */
 
 .footer {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -380,7 +379,7 @@ html.lenis body {
 
 #about {
     width: 100%;
-    height: 100lvh;
+    min-height: 100lvh;
     z-index: 0;
     position: fixed;
     transition: opacity 0.5s ease;
